packages/typ/tests/fixtures/diagnostics/0220_adt_record_update_bool_field_09.ml
type rec_iota = { depth : int; done : bool }
let base_iota = { depth = 8; done = true }
let _ = { base_iota with done = 9 }
